--- a/argo-app/templates/namespace.yaml
+++ b/argo-app/templates/namespace.yaml
@@ -26,8 +26,11 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     helm.sh/resource-policy: keep
+{{ include "argo-teste.annotations" . | indent 4 }}    
   labels:
     argocd.argoproj.io/managed-by: devops
+{{ include "argo-teste.labels" . | indent 4 }}
+
 {{ else }}
 ---
 apiVersion: v1
@@ -38,9 +41,10 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
     helm.sh/resource-policy: keep
     openshift.io/node-selector: 'region=agora, zone={{$sufix}}'
+{{ include "argo-teste.annotations" . | indent 4 }}    
   labels:
     argocd.argoproj.io/managed-by: devops
-
+{{ include "argo-teste.labels" . | indent 4 }}
 {{ end }}
 
 {{ end }}
@@ -59,6 +63,11 @@ metadata:
   namespace: {{ $namespace }}
   annotations:
     argocd.argoproj.io/sync-wave: "6"
+{{ include "argo-teste.annotations" . | indent 4 }}    
+  labels:
+    argocd.argoproj.io/managed-by: devops
+{{ include "argo-teste.labels" . | indent 4 }}
+
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -67,145 +76,6 @@ subjects:
 - kind: ServiceAccount
   name: default
   namespace: {{ $namespace }}
-{{ end }}
-{{ end }}
-{{ end }}
-
-# Creating delete role
-{{ if and .Values.namespaces .Values.sufixNSApplyRoleDelete }}
-{{ $sufixes := .Values.sufixNSApplyRoleDelete }}
-{{ range $namespace := .Values.namespaces }}
-{{ range $sufix := $sufixes }}
-{{ if hasSuffix $sufix $namespace }}
----
-apiVersion: v1
-items:
-- apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata: 
-    name: podDeleteRole
-    namespace: {{ $namespace }}
-    annotations:
-      argocd.argoproj.io/sync-wave: "5"
-  rules:
-  - apiGroups:
-    - ""
-    resources:
-    - pods/attach
-    - pods/exec
-    verbs:
-    - get
-    - list
-    - watch
-  - apiGroups:
-    - ""
-    resources:
-    - pods
-    - pods/attach
-    - pods/exec
-    verbs:
-    - create
-    - delete
-    - deletecollection
-    - patch
-    - update
-kind: List
-metadata:
-  resourceVersion: ""
-  selfLink: ""
-{{ end }}
-{{ end }}
-{{ end }}
-{{ end }}
-
-# Creating edit role
-{{ if and .Values.namespaces .Values.sufixNSApplyRoleEdit }}
-{{ $sufixes := .Values.sufixNSApplyRoleEdit }}
-{{ range $namespace := .Values.namespaces }}
-{{ range $sufix := $sufixes }}
-{{ if hasSuffix $sufix $namespace }}
----
-apiVersion: v1
-items:
-- apiVersion: rbac.authorization.k8s.io/v1
-  kind: Role
-  metadata: 
-    name: editNamespaceRole
-    namespace: {{ $namespace }}
-    annotations:
-      argocd.argoproj.io/sync-wave: "5"
-  rules:
-  - apiGroups:
-    - ""
-    resources:
-    - namespace
-    verbs:
-    - get
-    - list
-    - watch
-    - patch
-    - update
-kind: List
-metadata:
-  resourceVersion: ""
-  selfLink: ""
-
-{{ end }}
-{{ end }}
-{{ end }}
-{{ end }}
-
-# Creating delete rolebiding
-{{ if and .Values.namespaces .Values.sufixNSApplyRoleDelete }}
-{{ $sufixes := .Values.sufixNSApplyRoleDelete }}
-{{ range $namespace := .Values.namespaces }}
-{{ range $sufix := $sufixes }}
-{{ if hasSuffix $sufix $namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: rb-podDeleteRole
-  namespace: {{ $namespace }}
-  annotations:
-    argocd.argoproj.io/sync-wave: "6"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: podDeleteRole
-subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: Group
-  name: App_OCP_Developers_HO-FIX
-{{ end }}
-{{ end }}
-{{ end }}
-{{ end }}
-
-# Creating edit rolebiding
-{{ if and .Values.namespaces .Values.sufixNSApplyRoleEdit }}
-{{ $sufixes := .Values.sufixNSApplyRoleEdit }}
-{{ range $namespace := .Values.namespaces }}
-{{ range $sufix := $sufixes }}
-{{ if hasSuffix $sufix $namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: rb-editNamespaceRole
-  namespace: {{ $namespace }}
-  annotations:
-    argocd.argoproj.io/sync-wave: "6"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: editNamespaceRole
-subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: Group
-  name: App_OCP_Developers_HO-FIX
-
-{{ end }}
 {{ end }}
 {{ end }}
 {{ end }}
