--- a/argo-app/templates/namespace.yaml
+++ b/argo-app/templates/namespace.yaml
@@ -26,10 +26,10 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     helm.sh/resource-policy: keep
-{{ include "argo-teste.annotations" . | indent 4 }}    
+{{ include "argoteste.annotations" . | indent 4 }}    
   labels:
     argocd.argoproj.io/managed-by: devops
-{{ include "argo-teste.labels" . | indent 4 }}
+{{ include "argoteste.labels" . | indent 4 }}
 
 {{ else }}
 ---
@@ -41,10 +41,10 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
     helm.sh/resource-policy: keep
     openshift.io/node-selector: 'region=agora, zone={{$sufix}}'
-{{ include "argo-teste.annotations" . | indent 4 }}    
+{{ include "argoteste.annotations" . | indent 4 }}    
   labels:
     argocd.argoproj.io/managed-by: devops
-{{ include "argo-teste.labels" . | indent 4 }}
+{{ include "argoteste.labels" . | indent 4 }}
 {{ end }}
 
 {{ end }}
