--- a/argo-app/templates/namespace.yaml
+++ b/argo-app/templates/namespace.yaml
@@ -59,9 +59,9 @@ metadata:
   namespace: {{ $namespace }}
   annotations:
     argocd.argoproj.io/sync-wave: "6"
-{{ include "argo-teste.annotations" . | indent 4 }}    
+{{ include "argoteste.annotations" . | indent 4 }}    
   labels:
-{{ include "argo-teste.labels" . | indent 4 }}
+{{ include "argoteste.labels" . | indent 4 }}
 
 roleRef:
   apiGroup: rbac.authorization.k8s.io
