--- a/templates/argo-application.yaml
+++ b/templates/argo-application.yaml
@@ -26,7 +26,7 @@ template:
       path: argo-app
       helm:
         valueFiles:
-        - '.'
+        - '{{filepath}}'
     destination:
       server: {{ .Values.spec.destination.server }}
       namespace: devops
