--- a/templates/argo-application.yaml
+++ b/templates/argo-application.yaml
@@ -23,7 +23,7 @@ spec:
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         targetRevision: HEAD
-        path: .
+        path: ./
         helm:
           valueFiles:
           - '{{"{{"}}filepath{{"}}"}}'
