--- a/templates/argo-application.yaml
+++ b/templates/argo-application.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
   - list:
       elements:
-      - filepath: argo-app/values.yaml
+      - filepath: argo-app
         name: "argo-app"
   template:
     metadata: 
@@ -23,10 +23,7 @@ spec:
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         targetRevision: HEAD
-        path: ./
-        helm:
-          valueFiles:
-          - '{{"{{"}}filepath{{"}}"}}'
+        path: '{{"{{"}}filepath{{"}}"}}'
       destination:
         server: {{ .Values.spec.destination.server }}
         namespace: devops
