--- a/templates/argo-application-test-oc.yaml
+++ b/templates/argo-application-test-oc.yaml
@@ -21,7 +21,7 @@ spec:
         syncOptions:
           - CreateNamespace=true
       source:
-        repoURL: '{{url}}'
+        repoURL: '{{"{{url}}"}}'
         targetRevision: HEAD
         path: '{{"{{filepath}}"}}'
       destination:
