--- a/templates/namespaces-manager.yaml
+++ b/templates/namespaces-manager.yaml
@@ -1,19 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-app
-  namespace: devops
+  name: namespaces-manager
+  namespace: openshift-gitops
 spec:
   syncPolicy:
-    automated:
-      prune: false
-      selfHeal: true
+    automated: {}
     syncOptions:
       - CreateNamespace=true
   destination:
     server: {{ .Values.spec.destination.server }}
-    namespace: devops
   project: default
   source:
-    path: argo-app
+    path: namespaces-manager
     repoURL: {{ .Values.spec.source.repoURL }}
+    targetRevision: {{ .Values.spec.source.targetRevision }}
+
