--- a/namespaces-area-a/values.yaml
+++ b/namespaces-area-a/values.yaml
@@ -1,6 +1,6 @@
 # Lista de namespaces a serem criados. Executar uma vez para criar os namespaces e depois criar os demais itens
 namespaces:
-  - application-dev
+  - area-a-apps-dev
 
 # Lista de sufixos que serão aplicados como zonas
 nodeSelectorNS:
@@ -9,7 +9,7 @@ nodeSelectorNS:
   - prd
 
 pvcsByNS:
-  - namespace: application-dev
+  - namespace: area-a-apps-dev
     pvcname: pvc-teste
     size: 1Gi
     accessMode: ReadWriteOnce
