--- a/templates/namespaces-area-b.yaml
+++ b/templates/namespaces-area-b.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: namespaces-manager
+  name: namespaces-area-b
   namespace: openshift-gitops
 spec:
   syncPolicy:
@@ -12,7 +12,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: namespaces-manager
+    path: namespaces-area-b
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
 
